Bug 467294 - Images in bottom tabs are stretched. r=dao.
UltraBlame original commit: c79c596ea42f25d5a6f51b9d45c40ef567758dda

--- a/toolkit/themes/pinstripe/global/tabbox.css
+++ b/toolkit/themes/pinstripe/global/tabbox.css
@@ -313,28 +313,6 @@ appearance
 :
 tab
 ;
--
-moz
--
-box
--
-align
-:
-stretch
-;
-}
-tab
->
-.
-tab
--
-middle
-{
-padding
-:
-2px
-6px
-;
 }
 tab
 [
@@ -372,6 +350,17 @@ padding
 end
 :
 2px
+;
+}
+.
+tab
+-
+middle
+{
+padding
+:
+2px
+6px
 ;
 }
 .
@@ -631,15 +620,6 @@ tab
 -
 middle
 {
--
-moz
--
-box
--
-align
-:
-stretch
-;
 padding
 :
 1px
